--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>شبکه علمی دکتر سعید مجتبی‌زاده</title>
+  <title>دکتر سعید مجتبی‌زاده</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="description" content="اولین فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای در ایران">
   <meta name="keywords" content="دکتر سعید مجتبی زاده, Saeed Mojtabazadeh, مهندسی ژئوتکنیک, پژوهشگر برتر استان زنجان, نخبه علمی">
@@ -202,7 +202,47 @@
         font-size: 0.95rem;
       }
     }
-    
+
+    /* ✅ استایل مودال مقالات */
+    #modal {
+      display:none;
+      position:fixed;
+      top:0;left:0;width:100%;height:100%;
+      background:rgba(0,0,0,0.6);
+      justify-content:center;align-items:center;
+      z-index:999;
+    }
+    #modal-content {
+      background:rgba(255,255,255,0.1);
+      padding:20px;
+      border-radius:12px;
+      max-width:500px;width:90%;
+      max-height:70vh;
+      overflow-y:auto;
+      text-align:left;
+    }
+    #modal-content h3 {margin-bottom:10px;text-align:center}
+    #modal-links a {
+      display:block;
+      margin-bottom:6px;
+      color:#fff;
+      text-decoration:none;
+      background:rgba(255,255,255,0.1);
+      padding:6px 10px;
+      border-radius:6px;
+    }
+    #modal-links a:hover {background:rgba(255,255,255,0.25)}
+    #close-modal {
+      background:#9933cc;
+      color:#fff;
+      border:none;
+      padding:6px 10px;
+      border-radius:6px;
+      cursor:pointer;
+      margin-top:10px;
+      display:block;
+      margin-left:auto;margin-right:auto;
+    }
   </style>
 </head>
 <body>
@@ -212,7 +252,7 @@
     <button id="btn-fa">فارسی</button>
     <button id="btn-en">English</button>
   </div>
-  
+
   <div class="profile-container">
     <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
       <defs><clipPath id="circleView"><circle cx="50" cy="50" r="50"/></clipPath></defs>
@@ -226,144 +266,192 @@
   </div>
 
   <div class="link-bar" id="links"></div>
+  
+  <!-- ✅ دکمه دانلود مقالات -->
+  <button id="btn-download" style="background:rgba(255,255,255,0.15);color:white;padding:8px 14px;border:none;border-radius:25px;cursor:pointer;margin-bottom:12px;">
+    دانلود مقالات
+  </button>
 
-  <div class="about-box" id="about-text" tabindex="0" aria-label="درباره دکتر سعید مجتبی‌زاده">
-    دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. 
-  </div>
+  <div class="about-box" id="about-text" tabindex="0"></div>
 
   <div class="contact-box">
-    <a class="contact-item" href="mailto:mojtabazadeh@outlook.com"><span class="contact-icon" aria-hidden="true">📧</span>mojtabazadeh@outlook.com</a>
-    <a class="contact-item" href="tel:+989334115773"><span class="contact-icon" aria-hidden="true">📞</span>+98 933 411 5773</a>
+    <a class="contact-item" href="mailto:mojtabazadeh@outlook.com"><span class="contact-icon">📧</span>mojtabazadeh@outlook.com</a>
+    <a class="contact-item" href="tel:+989334115773"><span class="contact-icon">📞</span>+98 933 411 5773</a>
   </div>
 
-  <div class="footer" id="footer">
-    سعید مجتبی‌زاده ©
+  <div class="footer" id="footer">سعید مجتبی‌زاده ©</div>
+
+  <!-- ✅ مودال مقالات -->
+  <div id="modal">
+    <div id="modal-content">
+      <h3 id="modal-title">دانلود مقالات</h3>
+      <div id="modal-links"></div>
+      <button id="close-modal">بستن</button>
+    </div>
   </div>
 
-  <script defer>
-    const data={
-      fa:{
-        title:"دکتر سعید مجتبی‌زاده",
-        sub:"فوق‌دکتری مهندسی عمران در گرایش ژئوتکنیک لرزه‌ای",
-        download:"دانلود مقالات",
-        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
-        footer:"سعید مجتبی‌زاده ©",
-        links:[
-          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"پروفایل اُرکید",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}
-        ]
-      },
-      en:{
-        title:"Dr. Saeed Mojtabazadeh",
-        sub:"Postdoc Fellow in Geotechnical Engineering",
-        download:"Download Papers",
-        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
-        footer:"Saeed Mojtabazadeh ©",
-        links:[
-          {text:"Website",href:"http://mojtabazadeh.ir/"},
-          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-          {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
-          {text:"Instagallery",href:"https://www.instagallery.ir/"},
-          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
-          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-          {text:"English Hub",href:"https://www.mojtabazade.ir/"}
-        ]
+<script defer>
+  const data={
+    fa:{
+      title:"دکتر سعید مجتبی‌زاده",
+      sub:"فوق‌دکتری مهندسی عمران در گرایش ژئوتکنیک لرزه‌ای",
+      about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود. `,
+      footer:"سعید مجتبی‌زاده ©",
+      links:[
+        {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
+        {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
+        {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
+        {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
+        {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+        {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
+        {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}
+      ]
+    },
+    en:{
+      title:"Dr. Saeed Mojtabazadeh",
+      sub:"Postdoc Fellow in Geotechnical Engineering",
+      about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
+      footer:"Saeed Mojtabazadeh ©",
+      links:[
+        {text:"Website",href:"http://mojtabazadeh.ir/"},
+        {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
+        {text:"Studies",href:"http://www.smojtabazadeh.ir/"},
+        {text:"Instagallery",href:"https://www.instagallery.ir/"},
+        {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
+        {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+        {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
+        {text:"English Hub",href:"https://www.mojtabazade.ir/"}
+      ]
+    }
+  };
+
+  const mainTitle=document.getElementById("main-title"),
+        subTitle=document.getElementById("sub-title"),
+        linksContainer=document.getElementById("links"),
+        aboutText=document.getElementById("about-text");
+
+  function buildLinks(lang){
+    linksContainer.innerHTML="";
+    data[lang].links.forEach(l=>{
+      const a=document.createElement("a");
+      a.href=l.href;a.target="_blank";a.textContent=l.text;
+      linksContainer.appendChild(a);
+    });
+  }
+
+  function switchLang(lang){
+    localStorage.setItem("lang",lang);
+    document.body.classList.add("smooth-switch");
+    setTimeout(()=>{
+      mainTitle.textContent=data[lang].title;
+      subTitle.textContent=data[lang].sub;
+      aboutText.textContent=data[lang].about;
+      document.getElementById("footer").textContent=data[lang].footer;
+      buildLinks(lang);
+      document.getElementById("btn-download").textContent =
+        (lang==="fa") ? "دانلود مقالات" : "Download Papers";
+      if(lang==="en"){
+        document.body.classList.add("lang-en");
+        document.documentElement.dir="ltr";
+      }else{
+        document.body.classList.remove("lang-en");
+        document.documentElement.dir="rtl";
       }
-    };
+    },300);
+    setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
+  }
 
-    const mainTitle=document.getElementById("main-title"),
-          subTitle=document.getElementById("sub-title"),
-          linksContainer=document.getElementById("links"),
-          aboutText=document.getElementById("about-text");
+  const savedLang=localStorage.getItem("lang")||"fa";
+  switchLang(savedLang);
+  document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
+  document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
 
-    function buildLinks(lang){
-      linksContainer.innerHTML="";
-      data[lang].links.forEach(l=>{
-        const a=document.createElement("a");
-        a.href=l.href;a.target="_blank";a.textContent=l.text;
-        linksContainer.appendChild(a);
-      });
-    }
-    function switchLang(lang){
-      localStorage.setItem("lang",lang);
-      document.body.classList.add("smooth-switch");
-      setTimeout(()=>{
-        mainTitle.textContent=data[lang].title;
-        subTitle.textContent=data[lang].sub;
-        aboutText.textContent=data[lang].about;
-        document.getElementById("footer").textContent=data[lang].footer;
-        buildLinks(lang);
-        if(lang==="en"){
-          document.body.classList.add("lang-en");
-          document.documentElement.dir="ltr";
-        }else{
-          document.body.classList.remove("lang-en");
-          document.documentElement.dir="rtl";
-        }
-      },300);
-      setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
-    }
-    const savedLang=localStorage.getItem("lang")||"fa";
-    switchLang(savedLang);
-    document.getElementById("btn-fa").addEventListener("click",()=>switchLang("fa"));
-    document.getElementById("btn-en").addEventListener("click",()=>switchLang("en"));
+  const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
+  let particles=[];
+  function createParticles(){
+    const count=Math.floor((window.innerWidth*window.innerHeight)/12000);
+    particles=Array.from({length:count},()=>({
+      x:Math.random()*window.innerWidth,
+      y:Math.random()*window.innerHeight,
+      r:Math.random()*1.8+1,
+      dx:(Math.random()-0.5)*0.4,
+      dy:(Math.random()-0.5)*0.4
+    }));
+  }
+  function resizeParticles(){
+    const ratio=window.devicePixelRatio||1;
+    canvas.width=window.innerWidth*ratio;
+    canvas.height=window.innerHeight*ratio;
+    ctx.setTransform(1,0,0,1,0,0);
+    ctx.scale(ratio,ratio);
+    createParticles();
+  }
+  resizeParticles();
+  window.addEventListener("resize",resizeParticles);
 
-    const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
-    let particles=[];
-    function createParticles(){
-      const count=Math.floor((window.innerWidth*window.innerHeight)/12000);
-      particles=Array.from({length:count},()=>({
-        x:Math.random()*window.innerWidth,
-        y:Math.random()*window.innerHeight,
-        r:Math.random()*1.8+1,
-        dx:(Math.random()-0.5)*0.4,
-        dy:(Math.random()-0.5)*0.4
-      }));
-    }
-    function resizeParticles(){
-      const ratio=window.devicePixelRatio||1;
-      canvas.width=window.innerWidth*ratio;
-      canvas.height=window.innerHeight*ratio;
-      ctx.setTransform(1,0,0,1,0,0);
-      ctx.scale(ratio,ratio);
-      createParticles();
-    }
-    resizeParticles();
-    window.addEventListener("resize",resizeParticles);
-
-    (function draw(){
-      ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
-      ctx.fillStyle="rgba(200,150,255,0.8)";
-      particles.forEach(p=>{
-        ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
-        p.x+=p.dx;p.y+=p.dy;
-        if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
-        if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
-      });
-      ctx.strokeStyle="rgba(200,150,255,0.2)";
-      ctx.lineWidth=0.5;
-      for(let i=0;i<particles.length;i++){
-        for(let j=i+1;j<particles.length;j++){
-          const dx=particles[i].x-particles[j].x;
-          const dy=particles[i].y-particles[j].y;
-          const dist=Math.sqrt(dx*dx+dy*dy);
-          if(dist<120){
-            ctx.beginPath();
-            ctx.moveTo(particles[i].x,particles[i].y);
-            ctx.lineTo(particles[j].x,particles[j].y);
-            ctx.stroke();
-          }
+  (function draw(){
+    ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
+    ctx.fillStyle="rgba(200,150,255,0.8)";
+    particles.forEach(p=>{
+      ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
+      p.x+=p.dx;p.y+=p.dy;
+      if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
+      if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
+    });
+    ctx.strokeStyle="rgba(200,150,255,0.2)";
+    ctx.lineWidth=0.5;
+    for(let i=0;i<particles.length;i++){
+      for(let j=i+1;j<particles.length;j++){
+        const dx=particles[i].x-particles[j].x;
+        const dy=particles[i].y-particles[j].y;
+        const dist=Math.sqrt(dx*dx+dy*dy);
+        if(dist<120){
+          ctx.beginPath();
+          ctx.moveTo(particles[i].x,particles[i].y);
+          ctx.lineTo(particles[j].x,particles[j].y);
+          ctx.stroke();
         }
       }
-      requestAnimationFrame(draw);
-    })();    
-  </script>
+    }
+    requestAnimationFrame(draw);
+  })();
+
+  /* ✅ کد مخصوص دکمه و مودال مقالات */
+  const papers=[
+    {text:"27. The Orthotropy Effect of Underground Inclusion on the Seismic Response of Ground Surface",link:"https://drive.google.com/file/d/1gZ8aF2_FtYW0XBLlXkPnH97Sx1cUNRxv/view"},
+    {text:"26. Seismic Response of the Orthotropic Ground Surface Including Underground Circular Unlined Tunnel",link:"https://drive.google.com/file/d/1hZ532hBk93MWAzn8dMg24jnVr2pg0ZNg/view"}
+    // ... بقیه مقالات را به همین شکل اضافه کنید
+  ];
+
+  const modal=document.getElementById("modal"),
+        modalLinks=document.getElementById("modal-links"),
+        modalTitle=document.getElementById("modal-title"),
+        btnDownload=document.getElementById("btn-download"),
+        closeModal=document.getElementById("close-modal");
+
+  function buildModal(lang){
+    modalLinks.innerHTML="";
+    modalTitle.textContent = (lang==="fa") ? "دانلود مقالات" : "Download Papers";
+    papers.forEach(p=>{
+      const a=document.createElement("a");
+      a.href=p.link;
+      a.target="_blank";
+      a.textContent=p.text;
+      modalLinks.appendChild(a);
+    });
+  }
+
+  btnDownload.addEventListener("click",()=>{
+    const lang=localStorage.getItem("lang")||"fa";
+    buildModal(lang);
+    modal.style.display="flex";
+  });
+
+  closeModal.addEventListener("click",()=>modal.style.display="none");
+  modal.addEventListener("click",e=>{
+    if(e.target===modal) modal.style.display="none";
+  });
+</script>
 </body>
 </html>
