--- a/index.html
+++ b/index.html
@@ -217,47 +217,88 @@
   align-items: center;
 }
 #modal-content {
-  background: rgba(255, 255, 255, 0.95);
-  border-radius: 12px;
-  max-width: 400px;
+  background: linear-gradient(135deg, #f7f3ff, #dcd6ff);
+  border-radius: 20px;
+  max-width: 420px;
   width: 90%;
-  padding: 20px;
+  padding: 28px 32px;
   text-align: center;
-  box-shadow: 0 0 15px rgba(180,100,255,0.5);
+  box-shadow:
+    0 4px 15px rgba(102, 0, 153, 0.25),
+    0 0 40px rgba(153, 51, 204, 0.15);
   position: relative;
+  color: #3a0066;
+  font-family: 'Vazirmatn', sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.02em;
+  user-select: none;
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+#modal-content:hover {
+  transform: translateY(-6px) scale(1.02);
+  box-shadow:
+    0 8px 25px rgba(102, 0, 153, 0.4),
+    0 0 50px rgba(153, 51, 204, 0.25);
+}
+
 #modal-title {
-  font-size: 1.1rem;
-  color: #e0c7ff;
-  margin-bottom: 12px;
+  font-size: 1.3rem;
+  color: #5a0080;
+  margin-bottom: 20px;
+  font-weight: 800;
+  text-shadow: 0 0 8px rgba(153, 51, 204, 0.6);
 }
+
 #modal-links {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 16px;
 }
+
 #modal-links a {
-  background: rgba(255,255,255,0.1);
-  color: white;
-  padding: 8px 14px;
-  border-radius: 8px;
+  background: #fff;
+  color: #660099;
+  padding: 14px 20px;
+  border-radius: 30px;
   text-decoration: none;
-  transition: all 0.3s ease;
+  font-weight: 700;
+  box-shadow:
+    0 4px 8px rgba(180, 100, 255, 0.3),
+    inset 0 0 10px rgba(255, 255, 255, 0.7);
+  transition: background-color 0.35s ease, color 0.35s ease, transform 0.25s ease;
+  border: 2px solid transparent;
+  user-select: text;
 }
+
 #modal-links a:hover {
-  background: rgba(255,255,255,0.25);
-  box-shadow: 0 0 10px rgba(180,100,255,0.7);
+  background: #d8b3ff;
+  color: #3a0066;
+  box-shadow:
+    0 6px 18px rgba(153, 51, 204, 0.7),
+    inset 0 0 12px rgba(255, 255, 255, 0.85);
+  transform: translateY(-3px);
+  border-color: #660099;
 }
+
 #close-modal {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 14px;
+  left: 14px;
   background: none;
   border: none;
-  color: #e0c7ff;
-  font-size: 1.4rem;
+  color: #660099;
+  font-size: 1.8rem;
   cursor: pointer;
+  transition: color 0.3s ease, transform 0.25s ease;
+  user-select: none;
 }
+
+#close-modal:hover {
+  color: #a366ff;
+  transform: scale(1.15);
+}
+
     
     @media(max-width:480px){
       .profile-container{width:120px;height:120px;}
